fixed back button padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -524,6 +524,8 @@ nav {
 
   font-size: 22px;
   line-height: 1;
+
+  transform: translateY(-18px);
 }
 
 .gallery-title {
